# open-oak

./: Cargo.toml  README.md  build.rs  readme.md
shaders/: block.fs  block.vs
src/: block.rs  circle.rs  circle_vertices.rs  events.rs  init.rs  lib.rs  macros.rs  main.rs  player.rs  rectangle.rs  resource_manager.rs  resrouce_manager.rs  structs.rs  traits.rs
src/shapes/: collission.rs  mod.rs
src/shapes/circle/: circle.rs  circle_vertices.rs  mod.rs
src/shapes/rect/: mod.rs  rect.rs
