[package]
name = "open-oak"
authors = ["Christoffer Aakre <christoffer.corfield@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "2D game engine and rendering library"
readme = "README.md"
repository = "https://github.com/christofferaakre/open-oak"
keywords = ["graphics", "rendering", "game", "engine", "texture", "render", "display", "shader"]
categories = ["rendering", "rendering::engine", "game-engines", "graphics", "multimedia"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
image = "*"
cgmath = "*"
doc-comment = "*"

[dependencies.uuid]
version = "*"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]
